# Advent-Of-Code

./: .gitignore  .gitmodules  Advent-Of-Code.cabal  README.md  _config.yml  generate_day.sh
2015/Day_01/: Day_01.hs
2015/Day_02/: Day_02.hs
2015/Day_03/: Day_03.hs
2015/Day_04/: Day_04.hs
2015/app/: Main.hs
2023/: README.md
2023/Day_01/: Day_01.hs  README.md  day_01.tig
2023/Day_02/: Day_02.hs  README.md  input
2023/Day_03/: Day_03.hs  README.md  input
2023/Day_04/: Day_04.hs  README.md  input
2023/Day_05/: Day_05.hs  README.md  input
2023/Day_06/: Day_06.hs  README.md  input
2023/Day_07/: Day_07.hs  Day_07_bonus.hs  README.md  input
2023/Day_08/: Day_08.hs  README.md  input  make_graph.sh
2023/Day_09/: Day_09.hs  README.md
2023/Day_10/: Day_10.hs  Day_10_bonus.hs  README.md  grid.txt
2023/Day_11/: Day_11.hs  README.md  input
2023/Day_12/: Day_12.hs  README.md
2023/Day_13/: Day_13.hs  README.md
2023/Day_14/: Day_14.hs  Day_14_slow.hs  README.md  input
2023/Day_15/: Day_15.hs  README.md
2023/Day_16/: Day_16.hs  README.md
2023/Day_17/: Day_17.hs  Day_17_bonus.hs  README.md  input
2023/Day_18/: Day_18.hs  README.md  input
2023/Day_19/: Day_19.hs  README.md  input
2023/Day_20/: Day_20.hs  README.md  input
2023/Day_21/: Day_21.hs  README.md  input
2023/Day_22/: Day_22.hs  README.md  input
2023/Day_23/: Day_23.hs  README.md  break  input
2023/Day_24/: Day_24.hs  README.md  input
2023/Day_25/: Day_25.hs  README.md  input
2024/: README.md
2024/Day_01/: Day_01.hs  README.md
2024/Day_02/: Day_02.hs  README.md  input
2024/Day_03/: Day_03.hs  README.md
2024/Day_04/: Day_04.hs  README.md
2024/Day_05/: Day_05.hs  README.md
2024/Day_06/: Day_06.hs  README.md  input
2024/Day_07/: Day_07.hs  README.md  input
2024/Day_08/: Day_08.hs  README.md  input
2024/Day_09/: Day_09.hs  README.md  input
2024/Day_10/: Day_10.hs  README.md  input
2024/Day_11/: Day_11.hs  README.md  input
2024/Day_12/: Day_12.hs  README.md  input
2024/Day_13/: Day_13.hs  README.md  input
2024/Day_14/: Day_14.hs  README.md  input  result
2024/Day_15/: Day_15.hs  README.md  input
2024/Day_16/: Day_16.hs  README.md  input
2024/Day_17/: Day_17.hs  README.md  code  input
2024/Day_18/: Day_18.hs  README.md  input
2024/Day_19/: Day_19.hs  README.md  input
2024/Day_20/: Day_20.hs  README.md  input
2024/Day_21/: Day_21.hs  KeyboardPathfinding.hs  README.md  input
2024/Day_22/: Day_22.hs  README.md  input
2024/Day_23/: Day_23.hs  README.md
2024/Day_24/: Day_24.hs  README.md
2025/: README.md
common/: AOC.hs  Utils.hs
shell-utils/: generate_days.sh  generate_main.sh  init_year.sh  retrieve_input.sh
(+53 files in other folders)
